--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <button id="addBook">Add</button>
     <div class="form-popup" id="addBookForm">
         <form class="form-container">
-          <h3>Add a New Book!</h1>
+          <h3>Add a New Book!</h3>
       
           <label for="title"><b>Title</b></label><br>
           <input type="text" placeholder="Enter Title" name="title" id="bookTitle" required><br><br>
@@ -36,11 +36,11 @@
           <input type="text" placeholder="Enter Author" name="author" id="author" required><br><br>
 
           <label for="pages"><b>Number of Pages</b></label><br>
-          <input type="text" placeholder="Enter Page Amount" name="pages" id="pages" required><br><br>
+          <input type="number" placeholder="Enter Page Amount" name="pages" id="pages" required><br><br>
 
           <label for="read"><b>Read?</b></label><br>
           <input type="checkbox" name="read" id="read" required><br><br>
-          <button type="submit" id="newBookSubmit" class="btn" onclick="addBookToLibrary()">Add Book!</button>
+          <button type="button" id="newBookSubmit" class="btn">Add Book!</button>
           <button type="button" class="btn cancel" onclick="closeForm()">Close</button>
         </form>
       </div> 
