entries are listed in the table upon form submittion

--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
                 <th>Name</th>
                 <th>Author</th>
                 <th>Number of Pages</th>
+                <th>Read?</th>
             </tr>
             <tr>
                 <td>The Hobbit</td>
                 <td>J.R.R. Tolkien</td>
                 <td>295</td>
             </tr>
-            <tr></tr>
         </table>
     </div>
     <button id="addBook">Add</button>
