table formatting and styling

--- a/index.html
+++ b/index.html
@@ -10,17 +10,12 @@
 </head>
 <body>
     <div>
-        <table>
+        <table id="bookTable">
             <tr>
                 <th>Name</th>
                 <th>Author</th>
                 <th>Number of Pages</th>
                 <th>Read?</th>
-            </tr>
-            <tr>
-                <td>The Hobbit</td>
-                <td>J.R.R. Tolkien</td>
-                <td>295</td>
             </tr>
         </table>
     </div>
