--- a/index.html
+++ b/index.html
@@ -25,16 +25,16 @@
           <h3>Add a New Book!</h3>
       
           <label for="title"><b>Title</b></label><br>
-          <input type="text" placeholder="Enter Title" name="title" id="bookTitle" required><br><br>
+          <input type="text" placeholder="Enter Title" class="formInput" name="title" id="bookTitle" required><br><br>
       
           <label for="author"><b>Author</b></label><br>
-          <input type="text" placeholder="Enter Author" name="author" id="author" required><br><br>
+          <input type="text" placeholder="Enter Author" class="formInput"  name="author" id="author" required><br><br>
 
           <label for="pages"><b>Number of Pages</b></label><br>
-          <input type="number" placeholder="Enter Page Amount" name="pages" id="pages" required><br><br>
+          <input type="number" placeholder="Enter Page Amount" class="formInput"  name="pages" id="pages" required><br><br>
 
           <label for="read"><b>Read?</b></label><br>
-          <input type="checkbox" name="read" id="read" required><br><br>
+          <input type="checkbox" name="read" id="read" class="formInput"  required><br><br>
           <button type="button" id="newBookSubmit" class="btn">Add Book!</button>
           <button type="button" class="btn cancel" onclick="closeForm()">Close</button>
         </form>
