book is converted into a class, and the library is now using the module pattern.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div>
         <table id="bookTable">
             <tr>
-                <th>Name</th>
+                <th>Title</th>
                 <th>Author</th>
                 <th>Number of Pages</th>
                 <th>Read?</th>
